[gd_scene load_steps=11 format=4 uid="uid://fle1vwd76jcd"]

[ext_resource type="PackedScene" uid="uid://benq0bfympyo7" path="res://scenes/timing_mechanism_platform.tscn" id="1_fyrtp"]
[ext_resource type="Script" uid="uid://c2e85x7t4kvus" path="res://scripts/administrative_sector_officer.gd" id="1_rbito"]
[ext_resource type="PackedScene" uid="uid://cl4h22vr4u083" path="res://scenes/officer_base.tscn" id="2_6wulo"]
[ext_resource type="TileSet" uid="uid://c2xv0m8gwuaf8" path="res://scenes/ship_tileset.tres" id="2_rbito"]
[ext_resource type="Script" uid="uid://cbchq0iwh20di" path="res://scripts/admin_terminal_script_calls.gd" id="3_563bi"]
[ext_resource type="PackedScene" uid="uid://5p3nb0s7xyta" path="res://scenes/wall_terminal.tscn" id="4_6wulo"]
[ext_resource type="PackedScene" uid="uid://b6mrdx2sklm1e" path="res://scenes/reactor_sector/reactor_dash_platform.tscn" id="5_eawaf"]
[ext_resource type="PackedScene" uid="uid://d3jpuujkyi2tt" path="res://scenes/door.tscn" id="5_l3noe"]
[ext_resource type="PackedScene" uid="uid://c3cqhbb84sclu" path="res://scenes/reactor_sector/reactor_dash_recharge.tscn" id="6_eawaf"]
[ext_resource type="PackedScene" uid="uid://ddjo3k33h3au1" path="res://scenes/movable_item.tscn" id="7_563bi"]

[node name="Administrative Sector Officer" type="Node2D" node_paths=PackedStringArray("door_node", "items_node", "officer_script")]
script = ExtResource("1_rbito")
door_node = NodePath("Doors")
items_node = NodePath("Items")
officer_script = NodePath("Officer")

[node name="Officer" parent="." instance=ExtResource("2_6wulo")]
position = Vector2(290, 190)
officer_name = "Administrative Officer"

[node name="Timing Mechanism Platforms" type="Node2D" parent="."]

[node name="Bridge 1" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-330, 340)
platform_type = 1
max_distance = Vector2i(0, -1)
initial_direction = Vector2i(1, -1)
step_size = 1
platform_size = Vector2i(2, 1)

[node name="Bridge 2" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-430, 320)
platform_type = 1
max_distance = Vector2i(0, 1)
initial_direction = Vector2i(1, -1)
step_size = 1
platform_size = Vector2i(2, 1)

[node name="Piston" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-550, 310)
platform_type = 1
max_distance = Vector2i(0, -3)
initial_direction = Vector2i(1, -1)
step_size = 3
platform_size = Vector2i(2, 3)

[node name="Piston 2" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-350, 500)
platform_type = 1
max_distance = Vector2i(0, 3)
initial_direction = Vector2i(1, -1)
step_size = 3
platform_size = Vector2i(3, 4)

[node name="Piston 3" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-470, 590)
platform_type = 1
max_distance = Vector2i(0, -2)
initial_direction = Vector2i(1, -1)
step_size = 2
platform_size = Vector2i(3, 3)

[node name="Platform 1" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-450, 90)
platform_type = 2
max_distance = Vector2i(0, 2)
initial_direction = Vector2i(1, -1)
step_size = 2
platform_size = Vector2i(2, 1)

[node name="Elevator 1" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-110, 550)
max_distance = Vector2i(0, -12)
initial_direction = Vector2i(1, -1)
step_size = 4
platform_size = Vector2i(3, 1)
instant_return = true

[node name="Elevator 2" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-110, 550)
max_distance = Vector2i(0, -12)
start_distance = Vector2i(0, -4)
initial_direction = Vector2i(1, -1)
step_size = 4
platform_size = Vector2i(3, 1)
instant_return = true

[node name="Elevator 3" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-110, 550)
max_distance = Vector2i(0, -12)
start_distance = Vector2i(0, -8)
initial_direction = Vector2i(1, -1)
step_size = 4
platform_size = Vector2i(3, 1)
instant_return = true

[node name="Elevator 4" parent="Timing Mechanism Platforms" instance=ExtResource("1_fyrtp")]
position = Vector2(-110, 550)
max_distance = Vector2i(0, -12)
start_distance = Vector2i(0, -12)
initial_direction = Vector2i(1, -1)
step_size = 4
platform_size = Vector2i(3, 1)
instant_return = true

[node name="DashPlatforms" type="Node2D" parent="."]

[node name="DashPlatform" parent="DashPlatforms" instance=ExtResource("5_eawaf")]
position = Vector2(730, 310)
size = Vector2i(1, 4)
magnitude = 5
direction = Vector2i(0, -1)

[node name="TileMapLayer" type="TileMapLayer" parent="DashPlatforms/DashPlatform"]
position = Vector2(10, 10)
tile_map_data = PackedByteArray("AAD///7/AAAGAAEAAAD+////AAAGAAIAABD+/wAAAAAGAAIAABD+/wEAAAAGAAIAABD//wMAAAAGAAEAACD+/wIAAAAGAAEAAEA=")
tile_set = ExtResource("2_rbito")

[node name="Doors" type="Node2D" parent="."]

[node name="Left Wing Door" parent="Doors" instance=ExtResource("5_l3noe")]
position = Vector2(0, 150)
door_size = Vector2i(2, 4)

[node name="RightWingDoor" parent="Doors" instance=ExtResource("5_l3noe")]
position = Vector2(580, 150)
door_size = Vector2i(1, 4)

[node name="Tilemaps" type="Node2D" parent="."]

[node name="Main Platforms" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADj/wAAAAACAAEAAgDj/wEAAAADAAEAAADj/wIAAAADAAEAAADj/wMAAAADAAEAAADj/wQAAAADAAEAAADj/wUAAAADAAEAAADj/wYAAAADAAEAAADj/wcAAAADAAEAAADj/wgAAAADAAEAAADj/wkAAAADAAEAAADj/woAAAADAAEAAADj/wsAAAADAAEAAADj/wwAAAADAAEAAADj/w0AAAADAAEAAADj/w4AAAADAAEAAADj/w8AAAACAAEAAADk/w8AAAACAAAAAADl/w8AAAACAAAAAADm/w8AAAAFAAAAAAD0/w8AAAAFAAEAAAD1/w8AAAACAAAAAAD2/wAAAAACAAAAAQD2/wYAAAAFAAEAAAD2/wcAAAACAAAAAGD2/wgAAAACAAAAAGD2/wkAAAACAAAAAGD2/woAAAAFAAEAAQD2/w8AAAACAAAAAAD3/wAAAAACAAAAAQD3/wYAAAACAAAAAAD3/wcAAAABAAAAAAD3/wgAAAABAAAAAAD3/wkAAAABAAAAAAD3/woAAAACAAAAADD3/w8AAAAFAAAAAAD4/wkAAAABAAAAAAD4/w8AAAAHAAAAAAD5/wkAAAABAAAAAAD5/w8AAAAHAAAAAAD6/wkAAAABAAAAAAD6/w8AAAAHAAAAAAD7/wkAAAABAAAAAAD7/w8AAAAHAAAAAAD8/wkAAAABAAAAAAD8/w8AAAAHAAAAAAD9/wkAAAABAAAAAAD9/w8AAAAHAAAAAAD+/wkAAAABAAAAAAD+/w8AAAAHAAAAAAD//wAAAAACAAEAAwD//wEAAAAEAAEAAAD//wIAAAAEAAEAAAD//wMAAAAEAAEAAAD//wQAAAAEAAEAAAD//wUAAAAEAAEAAAD//wYAAAACAAEAAQD//wcAAAABAAAAAAD//wgAAAABAAAAAAD//wkAAAABAAAAAAD//woAAAACAAAAADD//w8AAAAFAAEAAAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAACAAEAAgAAAAgAAAADAAEAAAAAAAkAAAADAAEAAAAAAAoAAAAFAAAAAQAAAA8AAAACAAAAAAAAABAAAAABAAAAAAABAA8AAAACAAAAAAABABAAAAABAAAAAAAKAA0AAAAFAAEAAQALAA0AAAACAAAAADAMAA0AAAACAAAAADANAA0AAAACAAAAADAOAA0AAAACAAAAADAPAA0AAAACAAAAADAQAA0AAAACAAAAADARAA0AAAACAAAAADASAA0AAAAFAAAAAQAcAAAAAAABAAAAAAAcAAEAAAABAAAAAAAcAAIAAAABAAAAAAAcAAMAAAABAAAAAAAcAAQAAAABAAAAAAAcAAUAAAABAAAAAAAcAAYAAAABAAAAAAAcAAcAAAACAAEAAwAcAAgAAAAEAAEAAAAcAAkAAAAEAAEAAAAcAAoAAAAFAAEAAQAcAA8AAAACAAAAAAAcABAAAAABAAAAAAAdAAAAAAACAAEAAgAdAAEAAAADAAEAAAAdAAIAAAADAAEAAAAdAAMAAAADAAEAAAAdAAQAAAAAAAIAAAAdAAUAAAAAAAIAAAAdAAYAAAAAAAIAAAAdAAcAAAAAAAIAAAAdAAgAAAAAAAIAAAAdAAkAAAAAAAIAAAAdAAoAAAAAAAEAACAdAA8AAAACAAAAAAAdABAAAAABAAIAAAAdABEAAAABAAIAAAAdABIAAAABAAIAAAAdABMAAAABAAIAAAAdACAAAAABAAAAAAAdACEAAAABAAAAAAA5AAAAAAACAAEAAwA5AAEAAAAEAAEAAAA5AAIAAAAEAAEAAAA5AAMAAAAEAAEAAAA5AAQAAAAEAAEAAAA5AAUAAAAEAAEAAAA5AAYAAAAEAAEAAAA5AAcAAAAEAAEAAAA5AAgAAAAEAAEAAAA5AAkAAAAEAAEAAAA5AAoAAAAEAAEAAAA5AAsAAAAEAAEAAAA5AAwAAAAEAAEAAAA5AA0AAAAEAAEAAAA5AA4AAAAEAAEAAAA5AA8AAAAEAAEAAAA5ABAAAAAEAAEAAAA5ABEAAAAEAAEAAAA5ABIAAAAEAAEAAAA5ACAAAAABAAAAAAA5ACEAAAABAAAAAADj/xAAAAABAAAAAADj/xEAAAACAAEAAgDj/xIAAAADAAEAAADj/xMAAAADAAEAAADj/xQAAAADAAEAAADj/xUAAAACAAEAAADj/xYAAAACAAEAAgDj/xcAAAADAAEAAADj/xgAAAADAAEAAADj/xkAAAADAAEAAADj/xoAAAADAAEAAADj/xsAAAADAAEAAADj/xwAAAADAAEAAADj/x0AAAADAAEAAADj/x4AAAADAAEAAADj/x8AAAACAAEAAADj/yAAAAABAAAAAADj/yEAAAABAAAAAADk/wAAAAACAAAAAQDk/xAAAAABAAAAAADk/xEAAAACAAAAADDk/xUAAAACAAAAAADk/xYAAAACAAAAADDk/x8AAAACAAAAAADk/yAAAAABAAAAAADk/yEAAAABAAAAAADl/wAAAAACAAAAAQDl/xAAAAABAAAAAADl/xEAAAACAAAAADDl/xUAAAACAAAAAADl/xYAAAACAAAAADDl/x8AAAACAAAAAADl/yAAAAABAAAAAADl/yEAAAABAAAAAADm/wAAAAACAAAAAQDm/xAAAAADAAEAAADm/xEAAAACAAAAADDm/xUAAAAFAAAAAADm/xYAAAAFAAAAAQDm/x8AAAACAAAAAADm/yAAAAABAAAAAADm/yEAAAABAAAAAADn/wAAAAACAAAAAQDn/xEAAAACAAAAADDn/x8AAAACAAAAAADn/yAAAAABAAAAAADn/yEAAAABAAAAAADo/wAAAAACAAAAAQDo/xEAAAACAAAAADDo/x8AAAACAAAAAADo/yAAAAABAAAAAADo/yEAAAABAAAAAADp/wAAAAACAAAAAQDp/xEAAAACAAAAADDp/x8AAAACAAAAAADp/yAAAAABAAAAAADp/yEAAAABAAAAAADq/wAAAAACAAAAAQDq/xEAAAACAAAAADDq/x8AAAACAAAAAADq/yAAAAABAAAAAADq/yEAAAABAAAAAADr/wAAAAACAAAAAQDr/xEAAAACAAAAADDr/x8AAAACAAAAAADr/yAAAAABAAAAAADr/yEAAAABAAAAAADs/wAAAAACAAAAAQDs/xEAAAABAAcAADDs/xkAAAAAAAcAAwDs/xoAAAAAAAYAAADs/xsAAAAAAAYAAADs/xwAAAAAAAYAAADs/x0AAAAAAAYAAADs/x4AAAAAAAYAAADs/x8AAAABAAcAAADs/yAAAAABAAAAAADs/yEAAAABAAAAAADt/wAAAAACAAAAAQDt/xEAAAACAAAAADDt/x8AAAACAAAAAADt/yAAAAABAAAAAADt/yEAAAABAAAAAADu/wAAAAACAAAAAQDu/xEAAAACAAAAADDu/x8AAAACAAAAAADu/yAAAAABAAAAAADu/yEAAAABAAAAAADv/wAAAAACAAAAAQDv/xEAAAACAAAAADDv/x8AAAACAAAAAADv/yAAAAABAAAAAADv/yEAAAABAAAAAADw/wAAAAACAAAAAQDw/xEAAAACAAAAADDw/x8AAAACAAAAAADw/yAAAAABAAAAAADw/yEAAAABAAAAAADx/wAAAAACAAAAAQDx/xEAAAACAAAAADDx/x8AAAACAAAAAADx/yAAAAABAAAAAADx/yEAAAABAAAAAADy/wAAAAACAAAAAQDy/xEAAAACAAAAADDy/x8AAAACAAAAAADy/yAAAAABAAAAAADy/yEAAAABAAAAAADz/wAAAAACAAAAAQDz/xEAAAACAAAAADDz/xsAAAAFAAEAAADz/xwAAAAEAAEAAADz/x0AAAAEAAEAAADz/x4AAAAEAAEAAADz/x8AAAACAAEAAQDz/yAAAAABAAAAAADz/yEAAAABAAAAAAD0/wAAAAACAAAAAQD0/xAAAAAEAAEAAAD0/xEAAAACAAAAADD0/xsAAAACAAAAAAD0/xwAAAABAAAAAAD0/x0AAAABAAAAAAD0/x4AAAABAAAAAAD0/x8AAAABAAAAAAD0/yAAAAABAAAAAAD0/yEAAAABAAAAAAD1/wAAAAACAAAAAQD1/xAAAAABAAAAAAD1/xEAAAACAAAAADD1/xsAAAACAAAAAAD1/xwAAAABAAAAAAD1/x0AAAABAAAAAAD1/x4AAAABAAAAAAD1/x8AAAABAAAAAAD1/yAAAAABAAAAAAD1/yEAAAABAAAAAAD2/xAAAAABAAAAAAD2/xEAAAACAAEAAwD2/xIAAAAEAAEAAAD2/xMAAAAEAAEAAAD2/xQAAAAEAAEAAAD2/xUAAAAEAAEAAAD2/xYAAAAEAAEAAAD2/xcAAAAFAAEAAQD2/xsAAAACAAAAAAD2/xwAAAABAAAAAAD2/x0AAAABAAAAAAD2/x4AAAABAAAAAAD2/x8AAAABAAAAAAD2/yAAAAABAAAAAAD2/yEAAAABAAAAAAD3/xAAAAADAAEAAAD3/xEAAAADAAEAAAD3/xIAAAADAAEAAAD3/xMAAAADAAEAAAD3/xQAAAADAAEAAAD3/xUAAAADAAEAAAD3/xYAAAADAAEAAAD3/xcAAAAFAAAAAQD3/xsAAAAFAAAAAAD3/xwAAAADAAEAAAD3/x0AAAADAAEAAAD3/x4AAAADAAEAAAD3/x8AAAACAAEAAAD3/yAAAAABAAAAAAD3/yEAAAABAAAAAAD4/wAAAAACAAAAAQD4/wYAAAACAAAAAAD4/wcAAAABAAAAAAD4/wgAAAABAAAAAAD4/woAAAACAAAAADD4/xsAAAAHAAAAAAD4/x8AAAACAAAAAAD4/yAAAAABAAAAAAD4/yEAAAABAAAAAAD5/wAAAAACAAAAAQD5/wYAAAACAAAAAAD5/wcAAAABAAAAAAD5/wgAAAABAAAAAAD5/woAAAACAAAAADD5/xsAAAAHAAAAAAD5/x8AAAACAAAAAAD5/yAAAAABAAAAAAD5/yEAAAABAAAAAAD6/wAAAAACAAAAAQD6/wYAAAACAAAAAAD6/wcAAAABAAAAAAD6/wgAAAABAAAAAAD6/woAAAACAAAAADD6/xsAAAAHAAAAAAD6/x8AAAACAAAAAAD6/yAAAAABAAAAAAD6/yEAAAABAAAAAAD7/wAAAAACAAAAAQD7/wYAAAACAAAAAAD7/wcAAAABAAAAAAD7/wgAAAABAAAAAAD7/woAAAACAAAAADD7/xsAAAAHAAAAAAD7/x8AAAACAAAAAAD7/yAAAAABAAAAAAD7/yEAAAABAAAAAAD8/wAAAAACAAAAAQD8/wYAAAACAAAAAAD8/wcAAAABAAAAAAD8/wgAAAABAAAAAAD8/woAAAACAAAAADD8/xsAAAAHAAAAAAD8/x8AAAACAAAAAAD8/yAAAAABAAAAAAD8/yEAAAABAAAAAAD9/wAAAAACAAAAAQD9/wYAAAACAAAAAAD9/wcAAAABAAAAAAD9/wgAAAABAAAAAAD9/woAAAACAAAAADD9/xsAAAAHAAAAAAD9/x8AAAACAAAAAAD9/yAAAAABAAAAAAD9/yEAAAABAAAAAAD+/wAAAAACAAAAAQD+/wYAAAACAAAAAAD+/wcAAAABAAAAAAD+/wgAAAABAAAAAAD+/woAAAACAAAAADD+/xsAAAAHAAAAAAD+/x8AAAACAAAAAAD+/yAAAAABAAAAAAD+/yEAAAABAAAAAAD//xAAAAAEAAEAAAD//xEAAAAEAAEAAAD//xIAAAAEAAEAAAD//xMAAAAEAAEAAAD//xQAAAAEAAEAAAD//xUAAAAEAAEAAAD//xYAAAAEAAEAAAD//xcAAAAEAAEAAAD//xgAAAAEAAEAAAD//xkAAAAEAAEAAAD//xoAAAAEAAEAAAD//xsAAAAEAAEAAAD//xwAAAAEAAEAAAD//x0AAAAEAAEAAAD//x4AAAAEAAEAAAD//x8AAAACAAEAAQD//yAAAAABAAAAAAD//yEAAAABAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAABAAAAAAABAAQAAAABAAAAAAABAAUAAAACAAEAAgABAAYAAAACAAAAAFABAAcAAAAFAAAAAQACAAAAAAABAAAAAAACAAEAAAABAAAAAAACAAIAAAABAAAAAAACAAMAAAACAAEAAgACAAQAAAACAAAAAFACAAUAAAAFAAAAAQADAAAAAAABAAAAAAADAAEAAAABAAAAAAADAAIAAAACAAEAAgADAAMAAAAFAAAAAQAEAAAAAAABAAAAAAAEAAEAAAABAAAAAAAEAAIAAAACAAAAADAFAAAAAAABAAAAAAAFAAEAAAACAAEAAgAFAAIAAAAFAAAAAQAGAAAAAAABAAAAAAAGAAEAAAACAAAAADAHAAAAAAABAAAAAAAHAAEAAAACAAAAADAIAAAAAAACAAEAAgAIAAEAAAAFAAAAAQAJAAAAAAACAAAAAQAKAAAAAAACAAAAAQAKAAwAAAAFAAEAAAALAAAAAAACAAAAAQALAAwAAAACAAAAAAAMAAAAAAACAAAAAQAMAAwAAAACAAAAAAANAAAAAAACAAAAAQANAAwAAAACAAAAAAAOAAAAAAACAAAAAQAOAAwAAAACAAAAAAAPAAAAAAACAAAAAQAPAAwAAAACAAAAAAAQAAAAAAACAAAAAQAQAAwAAAACAAAAAAARAAAAAAACAAAAAQARAAwAAAACAAAAAAASAAAAAAACAAAAAQASAAwAAAAFAAAAAAATAAAAAAACAAAAAQAUAAAAAAACAAEAAwAUAAEAAAAFAAEAAQAVAAAAAAABAAAAAAAVAAEAAAACAAAAADAWAAAAAAABAAAAAAAWAAEAAAACAAAAADAXAAAAAAABAAAAAAAXAAEAAAACAAEAAwAXAAIAAAAFAAEAAQAYAAAAAAABAAAAAAAYAAEAAAABAAAAAAAYAAIAAAACAAAAADAZAAAAAAABAAAAAAAZAAEAAAABAAAAAAAZAAIAAAACAAEAAwAZAAMAAAAFAAEAAQAaAAAAAAABAAAAAAAaAAEAAAABAAAAAAAaAAIAAAABAAAAAAAaAAMAAAACAAEAAwAaAAQAAAACAAAAAGAaAAUAAAAFAAEAAQAbAAAAAAABAAAAAAAbAAEAAAABAAAAAAAbAAIAAAABAAAAAAAbAAMAAAABAAAAAAAbAAQAAAABAAAAAAAbAAUAAAACAAEAAwAbAAYAAAACAAAAAGAbAAcAAAAFAAEAAQAbAA8AAAACAAAAAAAbABAAAAABAAAAAAAeAAAAAAACAAAAAQAeACAAAAABAAAAAAAeACEAAAABAAAAAAAfAAAAAAACAAAAAQAfACAAAAABAAAAAAAfACEAAAABAAAAAAAgAAAAAAACAAAAAQAgACAAAAABAAAAAAAgACEAAAABAAAAAAAhAAAAAAACAAAAAQAhACAAAAABAAAAAAAhACEAAAABAAAAAAAiAAAAAAACAAAAAQAiACAAAAABAAAAAAAiACEAAAABAAAAAAAjAAAAAAACAAAAAQAjACAAAAABAAAAAAAjACEAAAABAAAAAAAkAAAAAAACAAAAAQAkACAAAAABAAAAAAAlAAAAAAACAAAAAQAlACEAAAABAAAAAAAmAAAAAAACAAAAAQAmACAAAAABAAAAAAAmACEAAAABAAAAAAAnAAAAAAACAAAAAQAnACAAAAABAAAAAAAnACEAAAABAAAAAAAoAAAAAAACAAAAAQAoACAAAAABAAAAAAAoACEAAAABAAAAAAApAAAAAAACAAAAAQApACAAAAABAAAAAAApACEAAAABAAAAAAAqAAAAAAACAAAAAQAqACAAAAABAAAAAAAqACEAAAABAAAAAAArAAAAAAACAAAAAQArACAAAAABAAAAAAArACEAAAABAAAAAAAsAAAAAAACAAAAAQAsACAAAAABAAAAAAAsACEAAAABAAAAAAAtAAAAAAACAAAAAQAtACAAAAABAAAAAAAtACEAAAABAAAAAAAuAAAAAAACAAAAAQAuACAAAAABAAAAAAAuACEAAAABAAAAAAAvAAAAAAACAAAAAQAvACAAAAABAAAAAAAvACEAAAABAAAAAAAwAAAAAAACAAAAAQAwACAAAAABAAAAAAAwACEAAAABAAAAAAAxAAAAAAACAAAAAQAxACAAAAABAAAAAAAxACEAAAABAAAAAAAyAAAAAAACAAAAAQAyACAAAAABAAAAAAAyACEAAAABAAAAAAAzAAAAAAACAAAAAQAzACAAAAABAAAAAAAzACEAAAABAAAAAAA0AAAAAAACAAAAAQA0ACAAAAABAAAAAAA0ACEAAAABAAAAAAA1AAAAAAACAAAAAQA1ACAAAAABAAAAAAA1ACEAAAABAAAAAAA2AAAAAAACAAAAAQA2ACAAAAABAAAAAAA2ACEAAAABAAAAAAA3AAAAAAACAAAAAQA3ACAAAAABAAAAAAA3ACEAAAABAAAAAAA4AAAAAAACAAAAAQA4ACAAAAABAAAAAAA4ACEAAAABAAAAAADm/wsAAAAAAAcAAgDm/woAAAAAAAYAAADm/wkAAAAAAAYAAADm/wgAAAAAAAYAAADm/wcAAAAAAAcAAwDm/wYAAAAHAAEAAADs/xIAAAAAAAcAAgAkACEAAAABAAAAAAAlACAAAAABAAAAAAABABEAAAABAAAAAAAAABEAAAABAAAAAAAAABIAAAABAAAAAAABABIAAAABAAAAAAAbABIAAAABAAAAAAAcABIAAAABAAAAAAAcABEAAAABAAAAAAAbABEAAAABAAAAAAAAAB8AAAABAAAAAAAAACAAAAABAAAAAAAAACEAAAABAAAAAAABAB8AAAABAAAAAAABACAAAAABAAAAAAABACEAAAABAAAAAAACAB8AAAABAAAAAAACACAAAAABAAAAAAACACEAAAABAAAAAAADAB8AAAABAAAAAAADACAAAAABAAAAAAADACEAAAABAAAAAAAEAB8AAAABAAAAAAAEACAAAAABAAAAAAAEACEAAAABAAAAAAAFAB8AAAABAAAAAAAFACAAAAABAAAAAAAFACEAAAABAAAAAAAGAB8AAAABAAAAAAAGACAAAAABAAAAAAAGACEAAAABAAAAAAAHAB8AAAACAAEAAAAHACAAAAABAAAAAAAHACEAAAABAAAAAAAIAB8AAAACAAAAAAAIACAAAAABAAAAAAAIACEAAAABAAAAAAAJAB8AAAACAAAAAAAJACAAAAABAAAAAAAJACEAAAABAAAAAAAKAB8AAAACAAAAAAAKACAAAAABAAAAAAAKACEAAAABAAAAAAALAB8AAAACAAAAAAALACAAAAABAAAAAAALACEAAAABAAAAAAAMAB8AAAACAAAAAAAMACAAAAABAAAAAAAMACEAAAABAAAAAAANAB8AAAACAAAAAAANACAAAAABAAAAAAANACEAAAABAAAAAAAOAB8AAAACAAAAAAAOACAAAAABAAAAAAAOACEAAAABAAAAAAAPAB8AAAACAAAAAAAPACAAAAABAAAAAAAPACEAAAABAAAAAAAQAB8AAAACAAAAAAAQACAAAAABAAAAAAAQACEAAAABAAAAAAARAB8AAAACAAAAAAARACAAAAABAAAAAAARACEAAAABAAAAAAASAB8AAAACAAAAAAASACAAAAABAAAAAAASACEAAAABAAAAAAATAB8AAAACAAAAAAATACAAAAABAAAAAAATACEAAAABAAAAAAAUAB8AAAACAAAAAAAUACAAAAABAAAAAAAUACEAAAABAAAAAAAVAB8AAAACAAEAAQAVACAAAAABAAAAAAAVACEAAAABAAAAAAAWAB8AAAABAAAAAAAWACAAAAABAAAAAAAWACEAAAABAAAAAAAXAB8AAAABAAAAAAAXACAAAAABAAAAAAAXACEAAAABAAAAAAAYAB8AAAABAAAAAAAYACAAAAABAAAAAAAYACEAAAABAAAAAAAZAB8AAAABAAAAAAAZACAAAAABAAAAAAAZACEAAAABAAAAAAAaAB8AAAABAAAAAAAaACAAAAABAAAAAAAaACEAAAABAAAAAAAbAB8AAAABAAAAAAAbACAAAAABAAAAAAAbACEAAAABAAAAAAAcAB8AAAABAAAAAAAcACAAAAABAAAAAAAcACEAAAABAAAAAAAWAB4AAAABAAAAAAAXAB4AAAABAAAAAAAYAB4AAAABAAAAAAAZAB4AAAABAAAAAAAaABUAAAAAAAQAAAAaABYAAAAAAAQAAAAaABcAAAAAAAQAAAAaABgAAAAAAAQAAAAaABkAAAAAAAQAAAAaABoAAAAAAAQAAAAaABsAAAAAAAQAAAAaABwAAAAEAAEAAAAaAB0AAAAEAAEAAAAaAB4AAAABAAAAAAAbABMAAAABAAAAAAAbABQAAAABAAAAAAAbABUAAAABAAAAAAAbABYAAAABAAAAAAAbABcAAAABAAAAAAAbABgAAAABAAAAAAAbABkAAAABAAAAAAAbABoAAAABAAAAAAAbABsAAAABAAAAAAAbABwAAAABAAAAAAAbAB0AAAABAAAAAAAbAB4AAAABAAAAAAAcABMAAAABAAAAAAAcABQAAAABAAAAAAAcABUAAAABAAAAAAAcABYAAAABAAAAAAAcABcAAAABAAAAAAAcABgAAAABAAAAAAAcABkAAAABAAAAAAAcABoAAAABAAAAAAAcABsAAAABAAAAAAAcABwAAAABAAAAAAAcAB0AAAABAAAAAAAcAB4AAAABAAAAAAAAABMAAAABAAAAAAAAABQAAAABAAAAAAAAABUAAAABAAAAAAAAABYAAAABAAAAAAAAABcAAAABAAAAAAAAABgAAAABAAAAAAAAABkAAAABAAAAAAAAABoAAAABAAAAAAAAABsAAAABAAAAAAAAABwAAAABAAAAAAAAAB0AAAABAAAAAAAAAB4AAAABAAAAAAABABMAAAABAAAAAAABABQAAAABAAAAAAABABUAAAABAAAAAAABABYAAAABAAAAAAABABcAAAABAAAAAAABABgAAAABAAAAAAABABkAAAABAAAAAAABABoAAAABAAAAAAABABsAAAABAAAAAAABABwAAAABAAAAAAABAB0AAAABAAAAAAABAB4AAAABAAAAAAACABQAAAAAAAIAAAACABUAAAAAAAIAAAACABYAAAAAAAIAAAACABcAAAAAAAIAAAACABgAAAAAAAIAAAACABkAAAAAAAIAAAACABoAAAAAAAIAAAACABsAAAAAAAIAAAACABwAAAADAAEAAAACAB0AAAADAAEAAAACAB4AAAABAAAAAAADAB4AAAABAAAAAAAEAB4AAAABAAAAAAAFAB4AAAABAAAAAAAGAB4AAAABAAAAAAAVAB4AAAAEAAEAAAAHAB4AAAADAAEAAAACAA8AAAAAAAEAAAACABAAAAAAAAIAAAACABEAAAAAAAIAAAACABIAAAAAAAIAAAACABMAAAAAAAIAAAAaABMAAAAAAAQAAAAaABIAAAAAAAQAAAAaABEAAAAAAAQAAAAaABAAAAAAAAQAAAAaAA8AAAAAAAMAAAAaABQAAAAAAAQAAAADAB0AAAAKAAMAAAAEAB0AAAAKAAMAAAAFAB0AAAAKAAMAAAAGAB0AAAAKAAMAAAAHABwAAAAAAAcAAwAHAB0AAAAAAAYAAAAVABwAAAAAAAcAAwAVAB0AAAAAAAYAAAAWAB0AAAAKAAMAAAAXAB0AAAAKAAMAAAAYAB0AAAAKAAMAAAAZAB0AAAAKAAMAAAAHAA8AAAAHAAAAAAAIAA8AAAAIAAAAAAAGAA8AAAAGAAAAAAAUAA8AAAAGAAAAAAAVAA8AAAAHAAAAAAAWAA8AAAAIAAAAAAA2AAsAAAACAAAAAAA3AAsAAAACAAAAAAA4AAsAAAACAAAAAAA3AAwAAAABAAAAAAA3AA0AAAABAAAAAAA3AA4AAAABAAAAAAA4AA8AAAABAAAAAAA4ABAAAAABAAAAAAAeAA8AAAAFAAAAAAAeABAAAAACAAAAAFAeABEAAAACAAAAAFAeABIAAAACAAAAAFA1AAwAAAAAAAIAABA1AA0AAAAAAAIAABA1AA4AAAAAAAIAABA1AA8AAAAAAAIAABA1ABAAAAAAAAIAABA1ABEAAAAAAAIAABA1ABIAAAAAAAIAABA1AAsAAAAAAAEAABAsAAcAAAAAAAEAACAsAAYAAAAAAAEAABAeABQAAAACAAEAAAAfABQAAAACAAAAAAAgABQAAAACAAAAAAAhABQAAAACAAAAAAAiABQAAAACAAAAAAAjABQAAAACAAAAAAAkABQAAAACAAAAAAAlABQAAAACAAAAAAAmABQAAAACAAAAAAAnABQAAAACAAAAAAAoABQAAAACAAAAAAApABQAAAACAAAAAAAqABQAAAACAAAAAAArABQAAAACAAAAAAAsABQAAAACAAAAAAAtABQAAAACAAAAAAAuABQAAAACAAAAAAAvABQAAAACAAAAAAAwABQAAAACAAAAAAAxABQAAAACAAAAAAAyABQAAAACAAAAAAAzABQAAAACAAAAAAA0ABQAAAACAAAAAAA1ABQAAAACAAAAAAA2ABQAAAACAAAAAAA3ABQAAAACAAAAAAA4ABQAAAACAAAAAAA5ABQAAAACAAEAABAeABMAAAACAAAAAFA5ABMAAAACAAAAAGA1ABMAAAAAAAIAADAlAAEAAAAAAAcAACAxAAEAAAAAAAcAACA=")
tile_set = ExtResource("2_rbito")

[node name="Death Layer" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADk/xwAAAAKAAMAAADk/x0AAAAKAAIAAADk/x4AAAAKAAIAAADl/xwAAAAKAAMAAADl/x0AAAAKAAIAAADl/x4AAAAKAAIAAADm/xwAAAAKAAMAAADm/x0AAAAKAAIAAADm/x4AAAAKAAIAAADn/xAAAAAKAAMAAADn/xwAAAAKAAMAAADn/x0AAAAKAAIAAADn/x4AAAAKAAIAAADo/xAAAAAKAAMAAADo/xwAAAAKAAMAAADo/x0AAAAKAAIAAADo/x4AAAAKAAIAAADp/xAAAAAKAAMAAADp/xwAAAAKAAMAAADp/x0AAAAKAAIAAADp/x4AAAAKAAIAAADq/xwAAAAKAAMAAADq/x0AAAAKAAIAAADq/x4AAAAKAAIAAADr/xwAAAAKAAMAAADr/x0AAAAKAAIAAADr/x4AAAAKAAIAAADs/xAAAAAKAAMAAADt/xAAAAAKAAMAAADt/xwAAAAKAAMAAADt/x0AAAAKAAIAAADt/x4AAAAKAAIAAADu/xAAAAAKAAMAAADu/xwAAAAKAAMAAADu/x0AAAAKAAIAAADu/x4AAAAKAAIAAADv/xAAAAAKAAMAAADv/xwAAAAKAAMAAADv/x0AAAAKAAIAAADv/x4AAAAKAAIAAADw/xAAAAAKAAMAAADw/xwAAAAKAAMAAADw/x0AAAAKAAIAAADw/x4AAAAKAAIAAADx/xAAAAAKAAMAAADx/xwAAAAKAAMAAADx/x0AAAAKAAIAAADx/x4AAAAKAAIAAADy/xAAAAAKAAMAAADy/xwAAAAKAAMAAADy/x0AAAAKAAIAAADy/x4AAAAKAAIAAADz/xAAAAAKAAMAAAD4/xwAAAAKAAMAAAD4/x0AAAAKAAIAAAD4/x4AAAAKAAIAAAD5/xwAAAAKAAMAAAD5/x0AAAAKAAIAAAD5/x4AAAAKAAIAAAD6/xwAAAAKAAMAAAD6/x0AAAAKAAIAAAD6/x4AAAAKAAIAAAD7/xwAAAAKAAMAAAD7/x0AAAAKAAIAAAD7/x4AAAAKAAIAAAD8/xwAAAAKAAMAAAD8/x0AAAAKAAIAAAD8/x4AAAAKAAIAAAD9/xwAAAAKAAMAAAD9/x0AAAAKAAIAAAD9/x4AAAAKAAIAAAD+/xwAAAAKAAMAAAD+/x0AAAAKAAIAAAD+/x4AAAAKAAIAAADq/xAAAAAKAAMAAADr/xAAAAAKAAMAAADs/wEAAAAHAAEAAgDt/wEAAAAHAAEAAgDu/wEAAAAHAAEAAgDv/wEAAAAHAAEAAgDw/wEAAAAHAAEAAgDx/wEAAAAHAAEAAgDy/wEAAAAHAAEAAgDz/wEAAAAHAAEAAgDs/xgAAAAGAAEAAADs/xMAAAAHAAEAAgAmAAEAAAAGAAEAACAnAAEAAAAGAAEAACAoAAEAAAAGAAEAACApAAEAAAAGAAEAACAqAAEAAAAGAAEAACArAAEAAAAGAAEAACAsAAEAAAAGAAEAACAtAAEAAAAGAAEAACAuAAEAAAAGAAEAACAvAAEAAAAGAAEAACAwAAEAAAAGAAEAACAfABAAAAAKAAMAAAAgABAAAAAKAAMAAAAhABAAAAAKAAMAAAAiABAAAAAKAAMAAAAjABAAAAAKAAMAAAAkABAAAAAKAAMAAAAlABAAAAAKAAMAAAAmABAAAAAKAAMAAAAnABAAAAAKAAMAAAAoABAAAAAKAAMAAAApABAAAAAKAAMAAAAqABAAAAAKAAMAAAArABAAAAAKAAMAAAAsABAAAAAKAAMAAAAtABAAAAAKAAMAAAAuABAAAAAKAAMAAAAvABAAAAAKAAMAAAAwABAAAAAKAAMAAAAxABAAAAAKAAMAAAAyABAAAAAKAAMAAAAzABAAAAAKAAMAAAA0ABAAAAAKAAMAAAA1ABAAAAAKAAMAAAA2ABAAAAAKAAMAAAA3ABAAAAAKAAMAAAA4ABAAAAAKAAMAAAAfABEAAAAKAAIAAAAgABEAAAAKAAIAAAAhABEAAAAKAAIAAAAiABEAAAAKAAIAAAAjABEAAAAKAAIAAAAkABEAAAAKAAIAAAAlABEAAAAKAAIAAAAmABEAAAAKAAIAAAAnABEAAAAKAAIAAAAoABEAAAAKAAIAAAApABEAAAAKAAIAAAAqABEAAAAKAAIAAAArABEAAAAKAAIAAAAsABEAAAAKAAIAAAAtABEAAAAKAAIAAAAuABEAAAAKAAIAAAAvABEAAAAKAAIAAAAwABEAAAAKAAIAAAAxABEAAAAKAAIAAAAyABEAAAAKAAIAAAAzABEAAAAKAAIAAAA0ABEAAAAKAAIAAAA1ABEAAAAKAAIAAAA2ABEAAAAKAAIAAAA3ABEAAAAKAAIAAAA4ABEAAAAKAAIAAAAsAAUAAAAGAAEAAAAsAAgAAAAGAAEAACA=")
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 1" type="TileMapLayer" parent="Tilemaps"]
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 2" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADr/wgAAAAGAAAAAADs/wgAAAAIAAAAAAA=")
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 3" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADy/wYAAAAGAAAAAADz/wYAAAAIAAAAAAA=")
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 4" type="TileMapLayer" parent="Tilemaps"]
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 5" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADs/wgAAAAIAAAAAADr/wgAAAAGAAAAAAA=")
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 6" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADz/wYAAAAIAAAAAADy/wYAAAAGAAAAAAA=")
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 7" type="TileMapLayer" parent="Tilemaps"]
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 8" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADr/wgAAAAGAAAAAADs/wgAAAAIAAAAAAA=")
tile_set = ExtResource("2_rbito")

[node name="Mechanism Tick 9" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AADz/wYAAAAIAAAAAADy/wYAAAAGAAAAAAA=")
tile_set = ExtResource("2_rbito")

[node name="DashRecharge" type="Node2D" parent="."]
position = Vector2(0, 2)

[node name="ReactorMechanics" type="Node2D" parent="DashRecharge"]

[node name="DashRecharge0" parent="DashRecharge/ReactorMechanics" instance=ExtResource("6_eawaf")]
position = Vector2(750, 228)

[node name="DashRecharge1" parent="DashRecharge/ReactorMechanics" instance=ExtResource("6_eawaf")]
position = Vector2(870, 128)

[node name="DashRecharge2" parent="DashRecharge/ReactorMechanics" instance=ExtResource("6_eawaf")]
position = Vector2(990, 128)

[node name="DashRecharge3" parent="DashRecharge/ReactorMechanics" instance=ExtResource("6_eawaf")]
position = Vector2(910, 228)

[node name="Terminals" type="Node2D" parent="."]
script = ExtResource("3_563bi")

[node name="Dash" parent="Terminals" instance=ExtResource("4_6wulo")]
position = Vector2(220, 220)
player_prompt = "Enable Dashing"

[node name="Gravity" parent="Terminals" instance=ExtResource("4_6wulo")]
position = Vector2(180, 600)
player_prompt = "Flip Gravity"

[node name="Engineering Task" parent="Terminals" instance=ExtResource("4_6wulo")]
position = Vector2(-110, 100)
player_prompt = "Restart Droid Servers"

[node name="Life Support Task" parent="Terminals" instance=ExtResource("4_6wulo")]
position = Vector2(-520, 400)
player_prompt = "Restart Cryostatis Program"


[node name="ReactorTask" parent="Terminals" instance=ExtResource("4_6wulo")]
position = Vector2(1110, 205)

[node name="Doors" type="Node2D" parent="."]

[node name="Left Wing Door" parent="Doors" instance=ExtResource("5_l3noe")]
position = Vector2(0, 150)
door_size = Vector2i(1, 4)


[node name="Items" type="Node2D" parent="."]

[node name="Screwdriver" parent="Items" instance=ExtResource("7_563bi")]
position = Vector2(-200, 280)
item_name = "Screwdriver"

[node name="Coolant" parent="Items" instance=ExtResource("7_563bi")]
position = Vector2(-220, 520)
item_name = "Coolant"

[node name="Power Cell" parent="Items" instance=ExtResource("7_563bi")]
position = Vector2(1078, 210)
item_name = "Power Cell"

[node name="Timing Mechanisms" type="Timer" parent="."]
autostart = true

[node name="Timed Gravity Flip" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timed Dash Action" type="Timer" parent="."]
wait_time = 60.0
one_shot = true


[node name="ReturnTimer" type="Timer" parent="."]


[connection signal="officer_interacted" from="Officer" to="." method="_officer_terminal_interacted"]
[connection signal="terminal_interacted" from="Terminals/Dash" to="." method="dash_ability" binds= [60]]
[connection signal="terminal_interacted" from="Terminals/Gravity" to="." method="_gravity_flip" binds= [5]]
[connection signal="terminal_interacted" from="Terminals/Engineering Task" to="." method="_on_complete_task" binds= ["restart_droid_servers"]]
[connection signal="terminal_interacted" from="Terminals/Life Support Task" to="." method="_on_complete_task" binds= ["restart_cryostatis_program"]]
[connection signal="timeout" from="Timing Mechanisms" to="." method="_on_timing_mechanism_tick"]
[connection signal="timeout" from="Timed Gravity Flip" to="." method="_gravity_flip_timeout"]
